Fix button state update code to operate on selection instead of current item.

BUG:240711

Also select the item after adding a new one.